--- a/gallery.html
+++ b/gallery.html
@@ -21,43 +21,85 @@
       <div class="row g-3">
         <!-- Gallery Image 1 -->
         <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/LT1b1fv/IMG-7109.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/LT1b1fv/IMG-7109.jpg" alt="Event 1" class="img-fluid rounded shadow-sm">
+          <a href="https://i.ibb.co/FbjR9zTZ/Whats-App-Image-2025-10-28-at-3-43-55-PM.jpg" target="_blank" class="gallery-item">
+            <img src="https://i.ibb.co/FbjR9zTZ/Whats-App-Image-2025-10-28-at-3-43-55-PM.jpg" alt="Event 1" class="img-fluid rounded shadow-sm">
           </a>
         </div>
 
         <!-- Gallery Image 2 -->
         <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/qMzJ8rBZ/IMG-7109-removebg-preview.png" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/qMzJ8rBZ/IMG-7109-removebg-preview.png" alt="Event 2" class="img-fluid rounded shadow-sm">
+          <a href="https://i.ibb.co/whNzN51r/Whats-App-Image-2025-10-28-at-3-43-48-PM.jpg" target="_blank" class="gallery-item">
+            <img src="https://i.ibb.co/whNzN51r/Whats-App-Image-2025-10-28-at-3-43-48-PM.jpg" alt="Event 2" class="img-fluid rounded shadow-sm">
           </a>
         </div>
 
         <!-- Gallery Image 3 -->
         <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/SQ1TQMR/madrasa-class.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/SQ1TQMR/madrasa-class.jpg" alt="Classroom" class="img-fluid rounded shadow-sm">
+          <a href="https://i.ibb.co/k6h2j78B/Whats-App-Image-2025-10-28-at-3-42-31-PM.jpg" target="_blank" class="gallery-item">
+            <img src="https://i.ibb.co/k6h2j78B/Whats-App-Image-2025-10-28-at-3-42-31-PM.jpg" alt="Classroom" class="img-fluid rounded shadow-sm">
           </a>
         </div>
 
         <!-- Gallery Image 4 -->
         <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/xGZhMJD/madrasa-event.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/xGZhMJD/madrasa-event.jpg" alt="Event 3" class="img-fluid rounded shadow-sm">
+          <a href="https://i.ibb.co/yFJ24kWv/Whats-App-Image-2025-10-28-at-3-41-14-PM.jpg" target="_blank" class="gallery-item">
+            <img src="https://i.ibb.co/yFJ24kWv/Whats-App-Image-2025-10-28-at-3-41-14-PM.jpg" alt="Event 3" class="img-fluid rounded shadow-sm">
           </a>
         </div>
 
         <!-- Gallery Image 5 -->
         <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/Ks1hsxd/students.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/Ks1hsxd/students.jpg" alt="Students" class="img-fluid rounded shadow-sm">
+          <a href="https://i.ibb.co/S4MY80MX/Whats-App-Image-2025-10-28-at-3-41-08-PM.jpg" target="_blank" class="gallery-item">
+            <img src="https://i.ibb.co/S4MY80MX/Whats-App-Image-2025-10-28-at-3-41-08-PM.jpg" alt="Students" class="img-fluid rounded shadow-sm">
+          </a>
+        </div>
+        
+        <!-- Gallery Image 6 -->
+        <div class="col-6 col-md-4 col-lg-3">
+          <a href="https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg" target="_blank" class="gallery-item">
+            <img src="https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg" alt="Students" class="img-fluid rounded shadow-sm">
           </a>
         </div>
 
-        <!-- Gallery Image 6 -->
+        <!-- Gallery Image 7 -->
         <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://i.ibb.co/5KGtvHw/library.jpg" target="_blank" class="gallery-item">
-            <img src="https://i.ibb.co/5KGtvHw/library.jpg" alt="Library" class="img-fluid rounded shadow-sm">
+          <a href="https://i.ibb.co/qYwwbXWh/Whats-App-Image-2025-10-28-at-3-40-42-PM.jpg" target="_blank" class="gallery-item">
+            <img src="https://i.ibb.co/qYwwbXWh/Whats-App-Image-2025-10-28-at-3-40-42-PM.jpg" alt="Students" class="img-fluid rounded shadow-sm">
+          </a>
+        </div>
+
+        <!-- Gallery Image 8 -->
+        <div class="col-6 col-md-4 col-lg-3">
+          <a href="https://i.ibb.co/hJvfZp4b/Whats-App-Image-2025-10-28-at-3-39-08-PM.jpg" target="_blank" class="gallery-item">
+            <img src="https://i.ibb.co/hJvfZp4b/Whats-App-Image-2025-10-28-at-3-39-08-PM.jpg" alt="Students" class="img-fluid rounded shadow-sm">
+          </a>
+        </div>
+
+        <!-- Gallery Image 9 -->
+        <div class="col-6 col-md-4 col-lg-3">
+          <a href="https://i.ibb.co/Kcb61F1f/Whats-App-Image-2025-10-28-at-3-38-43-PM.jpg" target="_blank" class="gallery-item">
+            <img src="https://i.ibb.co/Kcb61F1f/Whats-App-Image-2025-10-28-at-3-38-43-PM.jpg" alt="Students" class="img-fluid rounded shadow-sm">
+          </a>
+        </div>
+
+        <!-- Gallery Image 10 -->
+        <div class="col-6 col-md-4 col-lg-3">
+          <a href="https://i.ibb.co/s9HQzNd3/Whats-App-Image-2025-10-28-at-3-38-36-PM.jpg" target="_blank" class="gallery-item">
+            <img src="https://i.ibb.co/s9HQzNd3/Whats-App-Image-2025-10-28-at-3-38-36-PM.jpg" alt="Students" class="img-fluid rounded shadow-sm">
+          </a>
+        </div>
+
+        <!-- Gallery Image 11 -->
+        <div class="col-6 col-md-4 col-lg-3">
+          <a href="https://i.ibb.co/mrCZd07k/Whats-App-Image-2025-10-28-at-3-37-52-PM.jpg" target="_blank" class="gallery-item">
+            <img src="https://i.ibb.co/mrCZd07k/Whats-App-Image-2025-10-28-at-3-37-52-PM.jpg" alt="Students" class="img-fluid rounded shadow-sm">
+          </a>
+        </div>
+        
+        <!-- Gallery Image 12 -->
+        <div class="col-6 col-md-4 col-lg-3">
+          <a href="https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg" target="_blank" class="gallery-item">
+            <img src="https://i.ibb.co/j9vCtcn1/Whats-App-Image-2025-10-28-at-3-40-55-PM.jpg" alt="Library" class="img-fluid rounded shadow-sm">
           </a>
         </div>
       </div>
@@ -76,3 +118,4 @@
 
 </body>
 </html>
+
