--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <div class="carousel-item active">
           <div class="d-flex justify-content-center">
             <div class="card shadow-lg border-0" style="width: 22rem; background-color: rgba(255,255,255,0.1);">
-              <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top rounded-top" alt="Admission Open">
+              <img src="https://i.ibb.co/Y497ZPLB/Pngtree-news-concept-newspaper-headline-news-14251153.png" class="card-img-top rounded-top" alt="Admission Open">
               <div class="card-body">
                 <h5 class="card-title text-warning">Admission Open 2025</h5>
                 <p class="card-text text-light small">Enroll your child today for the new academic year.</p>
@@ -288,7 +288,7 @@
         <div class="carousel-item">
           <div class="d-flex justify-content-center">
             <div class="card shadow-lg border-0" style="width: 22rem; background-color: rgba(255,255,255,0.1);">
-              <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top rounded-top" alt="Annual Day">
+              <img src="https://i.ibb.co/Y497ZPLB/Pngtree-news-concept-newspaper-headline-news-14251153.png" class="card-img-top rounded-top" alt="Annual Day">
               <div class="card-body">
                 <h5 class="card-title text-warning">Annual Day Celebration</h5>
                 <p class="card-text text-light small">Join us for the grand Annual Day program on 15th November 2025.</p>
@@ -302,7 +302,7 @@
         <div class="carousel-item">
           <div class="d-flex justify-content-center">
             <div class="card shadow-lg border-0" style="width: 22rem; background-color: rgba(255,255,255,0.1);">
-              <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top rounded-top" alt="Results Announced">
+              <img src="https://i.ibb.co/Y497ZPLB/Pngtree-news-concept-newspaper-headline-news-14251153.png" class="card-img-top rounded-top" alt="Results Announced">
               <div class="card-body">
                 <h5 class="card-title text-warning">Results Announced</h5>
                 <p class="card-text text-light small">Check out the 2024–25 academic results — congratulations to all!</p>
@@ -316,7 +316,7 @@
         <div class="carousel-item">
           <div class="d-flex justify-content-center">
             <div class="card shadow-lg border-0" style="width: 22rem; background-color: rgba(255,255,255,0.1);">
-              <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top rounded-top" alt="Holiday Notice">
+              <img src="https://i.ibb.co/Y497ZPLB/Pngtree-news-concept-newspaper-headline-news-14251153.png" class="card-img-top rounded-top" alt="Holiday Notice">
               <div class="card-body">
                 <h5 class="card-title text-warning">Holiday Notice</h5>
                 <p class="card-text text-light small">The Madrasa will remain closed from 25th to 29th October for Eid Holidays.</p>
@@ -400,6 +400,7 @@
 
 </body>
 </html>
+
 
 
 
