--- a/index.html
+++ b/index.html
@@ -261,6 +261,91 @@
   </div>
 </section>
 
+  <section class="toppers-bar" aria-label="Class toppers">
+  <div class="toppers-title">📚 Class Toppers — Examination</div>
+  <div class="toppers-list" id="toppersList" role="list"></div>
+</section>
+
+<style>
+  :root{--accent:#0b5ed7;--bg:#f8f9fa;--card:#ffffff;--muted:#6c757d}
+  .toppers-bar{background:linear-gradient(90deg,rgba(11,94,215,0.06),rgba(11,94,215,0.02));padding:14px 20px;display:flex;align-items:center;gap:16px;border-bottom:1px solid rgba(0,0,0,0.04)}
+  .toppers-title{font-weight:700;color:var(--accent);min-width:180px;font-size:1.1rem}
+  .toppers-list{display:flex;gap:16px;overflow:auto;padding:10px 6px;scroll-behavior:smooth}
+  .toppers-list::-webkit-scrollbar{height:8px}
+  .toppers-list::-webkit-scrollbar-thumb{background:rgba(0,0,0,0.12);border-radius:999px}
+
+  .topper-card{min-width:260px;background:var(--card);border-radius:14px;box-shadow:0 4px 8px rgba(11,94,215,0.08);display:flex;flex-direction:column;align-items:center;overflow:hidden;border:1px solid rgba(11,94,215,0.08)}
+  .class-banner{background:var(--accent);color:#fff;width:100%;text-align:center;padding:6px 0;font-weight:700;font-size:1rem;letter-spacing:0.5px}
+  .content{display:flex;align-items:center;gap:14px;padding:16px;width:100%;justify-content:space-between}
+  .avatar{width:64px;height:64px;border-radius:10px;background:linear-gradient(45deg,#e9f0ff,#fff);display:flex;align-items:center;justify-content:center;font-weight:700;color:var(--accent);font-size:20px}
+  .info{flex:1;min-width:0}
+  .name{font-weight:700;font-size:1.05rem;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+  .meta{font-size:14px;color:var(--muted);display:flex;gap:8px;align-items:center}
+  .score-badge{background:linear-gradient(180deg,var(--accent),#0749a8);color:#fff;padding:8px 12px;border-radius:999px;font-weight:700;font-size:14px;white-space:nowrap}
+  .ribbon{background:linear-gradient(90deg,#ffd966,#ff7a18);color:#111;padding:4px 8px;border-radius:999px;font-weight:700;font-size:12px}
+  .rank-1 .ribbon{background:linear-gradient(90deg,#ffd700,#ffb700)}
+  .rank-2 .ribbon{background:linear-gradient(90deg,#c0c0c0,#9f9f9f)}
+  .rank-3 .ribbon{background:linear-gradient(90deg,#cd7f32,#b36225)}
+
+  @media (max-width:600px){
+    .toppers-title{min-width:120px;font-size:14px}
+    .topper-card{min-width:200px;padding:0}
+    .class-banner{font-size:0.9rem;padding:5px 0}
+  }
+</style>
+
+<script>
+  const toppers = [
+    { name: 'Aisha K.', className: 'Class 1', score: '98%', admissionNo: 'A001' },
+    { name: 'Ibrahim M.', className: 'Class 2', score: '97%', admissionNo: 'A002' },
+    { name: 'Fatima R.', className: 'Class 3', score: '96%', admissionNo: 'A003' },
+    { name: 'Zain U.', className: 'Class 4', score: '95%', admissionNo: 'A004' },
+    { name: 'Mariam S.', className: 'Class 5', score: '94%', admissionNo: 'A005' },
+    { name: 'Hassan P.', className: 'Class 6', score: '93%', admissionNo: 'A006' },
+    { name: 'Layla T.', className: 'Class 7', score: '92%', admissionNo: 'A007' },
+    { name: 'Omar N.', className: 'Class 8', score: '91%', admissionNo: 'A008' },
+    { name: 'Nadia L.', className: 'Class 9', score: '90%', admissionNo: 'A009' },
+    { name: 'Bilal R.', className: 'Class 10', score: '89%', admissionNo: 'A010' }
+  ];
+
+  const container = document.getElementById('toppersList');
+
+  function initialsOf(name){
+    if(!name) return '';
+    return name.split(' ').map(s=>s[0]).slice(0,2).join('').toUpperCase();
+  }
+
+  toppers.forEach((t,i)=>{
+    const rank = i+1;
+    const card = document.createElement('article');
+    card.className = `topper-card rank-${rank}`;
+    card.setAttribute('role','listitem');
+    card.innerHTML = `
+      <div class="class-banner">${t.className}</div>
+      <div class="content">
+        <div class="avatar">${t.initials || initialsOf(t.name)}</div>
+        <div class="info">
+          <div class="name">${t.name}</div>
+          <div class="meta">Adm: ${t.admissionNo || '-'} <span style="margin-left:8px" class="ribbon">#${rank}</span></div>
+        </div>
+        <div class="score-badge">${t.score}</div>
+      </div>
+    `;
+    container.appendChild(card);
+  });
+
+  (function autoScroll(){
+    const el = container;
+    if(!el) return;
+    let idx = 0;
+    setInterval(()=>{
+      idx = (idx + 1) % toppers.length;
+      const child = el.children[idx];
+      if(child) child.scrollIntoView({behavior:'smooth',inline:'center'});
+    }, 3000);
+  })();
+</script>
+
 <!-- NEWS -->
 <section id="news" class="py-5 text-center">
   <div class="container">
@@ -400,6 +485,7 @@
 
 </body>
 </html>
+
 
 
 
