--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 <!-- ===== EXAMINATION TOPPERS SECTION ===== -->
 <section class="toppers-section py-5 bg-light">
   <div class="container text-center" data-aos="fade-up">
-    <h2 class="fw-bold mb-4 text-primary">📘 Examination Toppers 2025</h2>
+    <h2 class="fw-bold mb-4 text-primary">Half Yearly Examination Toppers 2025</h2>
 
     <div class="toppers-bar d-flex overflow-auto py-3 px-2">
       <!-- Topper Cards -->
@@ -257,14 +257,14 @@
       <div class="topper-card me-3 flex-shrink-0">
         <div class="topper-banner">Class 2</div>
         <div class="topper-content">
-          <h5>Haneefa T.</h5>
+          <h5>Fidha T.</h5>
           <p>97%</p>
         </div>
       </div>
       <div class="topper-card me-3 flex-shrink-0">
         <div class="topper-banner">Class 3</div>
         <div class="topper-content">
-          <h5>Rahim M.</h5>
+          <h5>Suhail M.</h5>
           <p>96%</p>
         </div>
       </div>
@@ -278,14 +278,14 @@
       <div class="topper-card me-3 flex-shrink-0">
         <div class="topper-banner">Class 5</div>
         <div class="topper-content">
-          <h5>Imran S.</h5>
+          <h5>Irfan S.</h5>
           <p>99%</p>
         </div>
       </div>
       <div class="topper-card me-3 flex-shrink-0">
         <div class="topper-banner">Class 6</div>
         <div class="topper-content">
-          <h5>Ruksana P.</h5>
+          <h5>Rishal P.</h5>
           <p>98%</p>
         </div>
       </div>
@@ -299,7 +299,7 @@
       <div class="topper-card me-3 flex-shrink-0">
         <div class="topper-banner">Class 8</div>
         <div class="topper-content">
-          <h5>Zainab R.</h5>
+          <h5>Zahra R.</h5>
           <p>98%</p>
         </div>
       </div>
@@ -321,7 +321,7 @@
 
     <!-- View All Results Button -->
     <div class="mt-4">
-      <a href="result.html" class="btn btn-lg" style="background-color: #f3c13a; color: #fff; font-weight: 600;">
+      <a href="maintenance.html" class="btn btn-lg" style="background-color: #f3c13a; color: #fff; font-weight: 600;">
         View All Results
       </a>
     </div>
@@ -554,3 +554,4 @@
 
 </body>
 </html>
+
