--- a/index.html
+++ b/index.html
@@ -498,14 +498,14 @@
   <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h3 class="fw-bold">Notifications</h3>
-      <small class="text-muted">Latest updates & announcements</small>
+      <small class="text-muted">Latest updates</small>
     </div>
 
     <div class="list-group shadow-sm">
       <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
         <div>
           <div class="fw-bold text-primary">Admission Open for 2025 Batch</div>
-          <small class="text-muted">Apply now for Quran, Arabic, and Academic courses.</small>
+          <small class="text-muted">Apply now .</small>
         </div>
         <span class="badge bg-success rounded-pill">NEW</span>
       </a>
@@ -515,7 +515,7 @@
       </a>
       <a href="#" class="list-group-item list-group-item-action">
         <div class="fw-bold text-primary">Holiday Notice</div>
-        <small class="text-muted">Closed on November 1 for Kerala Formation Day.</small>
+        <small class="text-muted">Closed on November 1 .</small>
       </a>
       <a href="result.html" target="_blank" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
         <div>
@@ -554,4 +554,5 @@
 
 </body>
 </html>
+
 
