--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <li class="nav-item"><a class="nav-link" href="#notifications">Notifications</a></li>
         <li class="nav-item"><a class="nav-link" href="gallery.html" target="_blank">Gallery</a></li>
         <li class="nav-item"><a class="nav-link" href="faculties.html" target="_blank">Staff</a></li>
-        <li class="nav-item"><a class="nav-link" href="maintenance.html" target="_blank">Downloads</a></li>
+        <li class="nav-item"><a class="nav-link" href="downloads.html" target="_blank">Downloads</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html" target="_blank">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="idcard.html" target="_blank">ID Card</a></li>
         <li class="nav-item"><a class="nav-link" href="https://samastha.info/">Samastha</a></li>
@@ -554,5 +554,6 @@
 
 </body>
 </html>
+
 
 
