--- a/downloads.html
+++ b/downloads.html
@@ -86,7 +86,7 @@
             <div class="card-body">
               <h5 class="card-title fw-bold text-primary">Admission Form</h5>
               <p class="card-text">Download the latest admission form for new students.</p>
-              <a href="downloads/admission-form.pdf" class="btn btn-download" download>Download</a>
+              <a href="https://samastha.info/irsys/images/downloads/1707724777_585cc5b506136636b164.pdf" class="btn btn-download" download>Download</a>
             </div>
           </div>
         </div>
@@ -95,9 +95,9 @@
         <div class="col-md-4">
           <div class="card text-center p-3">
             <div class="card-body">
-              <h5 class="card-title fw-bold text-primary">Application Form</h5>
-              <p class="card-text">Official application form for various purposes.</p>
-              <a href="downloads/application-form.pdf" class="btn btn-download" download>Download</a>
+              <h5 class="card-title fw-bold text-primary">Application For TC</h5>
+              <p class="card-text">Form for transferring to another nadrasa.</p>
+              <a href="https://samastha.info/irsys/images/downloads/1707725101_cd663d192f90e9bc4446.pdf" class="btn btn-download" download>Download</a>
             </div>
           </div>
         </div>
@@ -108,7 +108,7 @@
             <div class="card-body">
               <h5 class="card-title fw-bold text-primary">Syllabus (All Classes)</h5>
               <p class="card-text">Get the syllabus for classes 1 to 10 in PDF format.</p>
-              <a href="downloads/syllabus.pdf" class="btn btn-download" download>Download</a>
+              <a href="chrome://downloads/10-07-2025%2002_42%20PM%20(1).pdf" class="btn btn-download" download>Download</a>
             </div>
           </div>
         </div>
