--- a/idcard.html
+++ b/idcard.html
@@ -76,10 +76,6 @@
     </form>
   </div>
 
-  <!-- html2canvas + jsPDF -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
   <script>
     const scriptURL = 'https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec';
 
@@ -149,7 +145,7 @@
                     height: 100px;
                     border-radius: 50%;
                     object-fit: cover;
-                    margin-top: -20px;
+                    margin-top: -20px; /* lowered slightly */
                     border: 4px solid white;
                     box-shadow: 0 0 10px rgba(0,0,0,0.3);
                   }
@@ -166,7 +162,7 @@
                 </style>
               </head>
               <body>
-                <div class="id-card" id="idCard">
+                <div class="id-card">
                   <div class="id-header">
                     <h5>NOORUSSALAM SECONDARY MADRASA</h5>
                     <small>Kambippalam Kerala Estate, Malappuram Dt.<br>Email: noorussalam6110@gmail.com</small>
@@ -187,24 +183,9 @@
                     </div>
                   </div>
                 </div>
-
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-                <script>
-                  window.onload = () => {
-                    const { jsPDF } = window.jspdf;
-                    html2canvas(document.getElementById('idCard')).then(canvas => {
-                      const imgData = canvas.toDataURL('image/png');
-                      const pdf = new jsPDF({orientation: 'portrait', unit: 'px', format: [canvas.width, canvas.height]});
-                      pdf.addImage(imgData, 'PNG', 0, 0, canvas.width, canvas.height);
-                      pdf.save('${s.FullName}_IDCard.pdf');
-                    });
-                  };
-                </script>
               </body>
               </html>
             `;
-
             newWin.document.open();
             newWin.document.write(html);
             newWin.document.close();
