--- a/index.html
+++ b/index.html
@@ -240,6 +240,45 @@
     <a href="#about" class="btn btn-outline-secondary btn-lg m-2">Learn More</a>
   </div>
 </section>
+
+  <section class="toppers-section">
+  <div class="toppers-header">
+    <span class="badge">Examination</span>
+    <h3>Top Performers — Congratulations!</h3>
+  </div>
+
+  <div class="toppers-grid">
+    <!-- Topper 1 -->
+    <div class="topper-card">
+      <img src="https://via.placeholder.com/150" alt="Student photo" class="topper-photo">
+      <div class="topper-rank">1st</div>
+      <div class="topper-name">A. Rahman</div>
+      <div class="topper-meta">Class 10 — Roll 03</div>
+      <div class="topper-stat">95.6%</div>
+    </div>
+
+    <!-- Topper 2 -->
+    <div class="topper-card">
+      <img src="https://via.placeholder.com/150" alt="Student photo" class="topper-photo">
+      <div class="topper-rank">2nd</div>
+      <div class="topper-name">S. Fatima</div>
+      <div class="topper-meta">Class 10 — Roll 07</div>
+      <div class="topper-stat">94.2%</div>
+    </div>
+
+    <!-- Topper 3 -->
+    <div class="topper-card">
+      <img src="https://via.placeholder.com/150" alt="Student photo" class="topper-photo">
+      <div class="topper-rank">3rd</div>
+      <div class="topper-name">M. Yusuf</div>
+      <div class="topper-meta">Class 9 — Roll 01</div>
+      <div class="topper-stat">93.8%</div>
+    </div>
+
+    <!-- add more topper-card blocks as needed -->
+  </div>
+</section>
+
 <!-- ===== EXAMINATION TOPPERS SECTION ===== -->
 <section class="toppers-section py-5 bg-light">
   <div class="container text-center" data-aos="fade-up">
@@ -554,6 +593,7 @@
 
 </body>
 </html>
+
 
 
 
