--- a/class1-zone.html
+++ b/class1-zone.html
@@ -122,7 +122,7 @@
       .then(res => res.text())
       .then(csv => {
         const rows = csv.split('\n').slice(1);
-        const materials = { 'Exam Note': [], 'Homework': [], 'Model Paper': [] };
+        const materials = { 'Exam Note': [], 'PYQ': [], 'other': [] };
 
         rows.forEach(r => {
           const cols = r.split(',');
